fix responsive layout on smaller screens

--- a/web_project/improved/css/app.css
+++ b/web_project/improved/css/app.css
@@ -216,6 +216,7 @@ footer a {
     background-color: rgba(15, 15, 15, 0.21);
     position: fixed;
     z-index: 1;
+    font-size: 2.4vw;
 }
 .menu a {
     color: #fff;
